Main content page up to date with latest info. New logo, sponsors.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -22,21 +22,37 @@
 <main id="content" class="content" role="main">
   <article class="post">
     <header class="post-header">
-        <h2 class="post-title"><a href="#">Uber DevLeague Hawaii Hackathon</a></h2>
+        <h2 class="post-title"><a href="#">DevLeague / Uber 2015 Hawaii Hackathon</a></h2>
     </header>
     <section class="post-content">
-      <p>DevLeague and Uber is pleased to announce an exciting new partnership that we hope will contribute to the growth and exposure of the technical ecosystem here in Hawaii!</p>
-      <p>This alliance brings together Uber’s expertise, along with DevLeague’s accelerated software development program in an effort to give Hawaii developers exciting new opportunities to network, collaborate and build using Uber’s API.</p>
-
-      <p><a href="/register-now">Register for hackathon >></a></p>
-
       <section>
-        <h3>What is a Hackathon?</h3>
-        <p>The Uber DevLeague Hackathon is a 48 hour competition designed for attendees to build software applications using Uber’s API (application program interface).</p>
+        <p>DevLeague and Uber are pleased to announce an exciting new partnership that we hope will contribute to the growth and exposure of the technical ecosystem here in Hawaii! It is a key initiative of ours to continue to grow and connect the developer community and provide valuable skills and opportunities to our students and the community at large.</p>
+        <p>To celebrate we are excited to announce a first of it's kind of event that brings together Uber’s expertise, along with DevLeague’s accelerated software development program in an effort to give Hawaii developers exciting new opportunities to network, collaborate and build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API.</a>.</p>
+
       </section>
-
       <section>
-        <h3>Dates</h3>
+        <h3>What is the Hackathon All About?</h3>
+        <p>We truly believe that community is such an important part of what we do and we really wanted to try to put together an event that would allow developers from across the Islands to come together in venues in their own communities, but particpate together as a whole.</p>
+        <p>Uber engineers will be traveling from Uber HQ and along side instructors from DevLeague will be working in conjunction to host a 36 hour challenge, designed for attendees across the state to come together in both physical and virtual spaces and celebrate the community that we have n Hawaii as a whole.</p>
+        <p>Attendees will collaborate in teams, be able to interact virtually with mentors and other teams, and come together to see what kind of applications we can build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API</a> for some fun prizes and to see what kind of cool stuff we can come up with over a weekend.</p>
+        <div class="livecoding-large">
+          <span>
+            <img src="{{asset 'images/Livecoding.tv_logo.png'}}">
+          </span>
+        </div>
+        <p>We had the challenge of thinking how we could get attendees to come together for the event across physical borders and simulate a single physical space. Thankfully, we are able to partner with the fine folks at <a href="https://www.livecoding.tv/">Livecoding.tv</a> to connect all attendees in a virtual format.</p>
+        <p>All attendees will be able to stream from their location, chat with hosts, mentors, share tips and tricks and just in general have a good time coding with others in an open format.</p>
+        <p>We will also have guests on the main channel talking about some of the cool things that they have going on.</p>
+        <div class="register">
+          <span class="register-link">
+            <a href="/register-now">Cool! I wanna sign up. >></a>
+          </span>
+        </div>
+      </section>
+    </article>
+    <article class="post">
+      <section>
+        <h3>When Is It?</h3>
         <p>October 23rd, 24th, and 25th 2015</p>
       </section>
 
@@ -56,7 +72,7 @@
           <li class="location">
             <h5>Oahu</h5>
             <h6>The Box Jelly</h6>
-            <address>307a Kamani Street Honolulu, HI 9681</address>
+            <address>307a Kamani Street Honolulu, HI 96813</address>
           </li>
           <li class="location">
             <h5>Hawaii</h5>
@@ -77,20 +93,19 @@
             </ul>
           </li>
           <li class="location">
-            <h5>Kaui</h5>
+            <h5>Kauai</h5>
             <h6>Anchor Cover Shopping Center </h6>
             <address>3416 Rice St, Lihue, HI 96766</address>
           </li>
         </ul>
       </section>
     </secion>
-  </article>
-  <article class="post">
-    <header class="post-header">
-        <h2 class="post-title"><a href="/register-now">Register for the Hackathon!</a></h2>
-    </header>
     <section class="post-content">
-      <a href="/register-now">Lets get down to business</a>
+      <div class="register">
+        <span class="register-link">
+          <a href="/register-now">I'm down! Let's do this. >></a>
+        </span>
+      </div>
     </section>
   </article>
   <article class="post">
@@ -99,35 +114,105 @@
     </header>
     <section class="post-content">
         <ul>
-          <h2>Day 1 - Oct. 23 Friday</h2>
-          <li>4pm: Registration</li>
+          <h3>Day 1 - Oct. 23 Friday</h3>
+          <li>4pm: Venue Doors Open</li>
           <li>6pm: Kick-off with dinner/Opening ceremonies</li>
           <li>8pm: Pitch ideas and form teams</li>
-          <li>9pm: Hack</li>
+          <li>9pm: GO TIME!</li>
         </ul>
         <ul>
-          <h2>Day 2 - Oct. 24 Saturday</h2>
+          <h3>Day 2 - Oct. 24 Saturday</h3>
           <li>10am: Hack</li>
           <li>1pm: Lunch is served</li>
           <li>2pm: Hack</li>
           <li>6pm: Dinner is served</li>
-          <li>7pm: Hack</li>
+          <li>7pm: Caffienate and Pull All Nighter</li>
         </ul>
         <ul>
-          <h2>Day 3 - Oct. 25 Sunday</h2>
-          <li>10am: Breakfast is served</li>
-          <li>2pm: Lunch is served</li>
-          <li>5pm: Hacking officially end and judging begins</li>
-          <li>7pm: Closing ceremonies: Directly following judging</li>
+          <h3>Day 3 - Oct. 25 Sunday</h3>
+          <li>10am: Applications are submitted and breakfast is served</li>
+          <li>11am: Winners are announced</li>
+          <li>12pm: Closing ceremonies: Directly following judging</li>
         </ul>
     </secion>
+  </article>
+  <article class="post">
+    <header class="post-header">
+        <h2 class="post-title"><a href="https://www.eventbrite.com/e/devleagueuber-hackathon-tickets-18921075446">Pre-Events</a></h2>
+    </header>
+    <section class="post-content">
+      <p>We will be hosting a series of pre-events prior to the hackathon to get hands-on with components of the Uber API and useful tips and tools for getting prepared for a smooth experience during the event and to allow people to prepare on the tools and things to consider to save time prior to the event.</p>
+      <p>Registered attendees will receive invites for online virtual sessions.</p>
+      <div>
+        <h4>October 13 - 6PM - Uber API Overview</h4>
+        <p>In this session we will go over some of the main components of the Uber API in order to give participants some experience with connecting and understanding the various parts of the Uber API.</p>
+        <p>This is a great way to start getting some ideas for what you may want to build and get familiar with basic setup allowing you to spend your time during the event building your app.</p>
+      </div>
+      <div>
+        <h4>October 19 - 6PM - Deployment Tips and Tricks</h4>
+        <p>Don't get yourself hung up on trying to get your application out the door an hour before the end of the event!</p>
+        <p>In this session, we will go over some common deployment scenarios and share some tips and resources for setting up your environments before the event. This will save you time towards the end of the event when you need to JUST SHIP IT!</p>
+      </div>
+    </section>
   </article>
   <article class="post">
     <header class="post-header">
         <h2 class="post-title"><a href="#">Prizes</a></h2>
     </header>
     <section class="post-content">
-      <p>Up to $10,000 worth in prizes awarded to top 3 teams.</p>
+      <p>We're still working hard to finalize all the official prizes but we will be offering up to $10,000 in prizes to winning teams in variety of categories.
+      </p>
+      <p>
+        <h4>Prizes will include:</h4>
+        <ul>
+          <li>A chance to go to Uber Headquarters and spend a day with their engineering team (travel not included)</li> 
+          <li>A DevLeague scholarship</li> 
+          <li>Uber swag</li>
+          <li>Electronics</li> 
+          <li>Gamer Gear</li> 
+          <li>Gift Cards</li>
+          <li>Conference Passes</li>
+          <li>...and more.</li>
+        </ul>
+      </p>
+      <p>
+        <h4>Award Categories:</h4>
+        <ul>
+          <li>Best Overall Application</li>
+          <li>Best Student Submission</li>
+          <li>Best Noob Submission</li>
+          <li>Beast Mode Award</li>
+          <li>Best Dressed Attendee</li>
+        </ul>
+      </p>
+      <div class="register">
+        <span class="register-link">
+          <a href="/register-now">Sounds good! I'm in. >></a>
+        </span>
+      </div>
+    </section>
+  </article>
+  <article class="post">
+    <header class="post-header">
+        <h2 class="post-title"><a href="#">Judges</a></h2>
+    </header>
+    <section class="post-content">
+      <p>TBA</p>
+    </secion> 
+  </article>
+  <article class="post">
+    <header class="post-header">
+        <h2 class="post-title"><a href="#">Demz da Rules</a></h2>
+    </header>
+    <section class="post-content">
+        <ul>
+          <li>All participants must be at least 18 years of age or older.</li>
+          <li>All participants must attend the event at one of the official venues as listed.</li>
+          <li>Particpants must build applications during the course of the event.</li>
+          <li>All participants must utilize the <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API.</a>.</li>
+          <li>All particpants must respect the hosts and facilities.</li>
+          <li>All particpants must be <b>excellent</b> to each other.</li>
+        </ul>
     </secion>
   </article>
   <article class="post">
@@ -137,16 +222,19 @@
     <section class="post-content">
       <ul id="sponsors-list" class="plain-list">
         <li class="uber-logo">
-          <img src="http://uberhackathon.devleague.com/content/images/2015/10/1xhN4hhMy3qL387YbgY1Ypnk_BHq7rhDIjt1LyBc.png" alt="uber-logo">
+          <img src="{{asset 'images/uber.png'}}" alt="uber-logo">
+        </li>
+        <li class="livecoding-logo">
+          <img src="{{asset 'images/Livecoding.tv_logo.png'}}" alt="livecoding-logo">
         </li>
         <li class="devleague-logo">
-          <img src="http://uberhackathon.devleague.com/content/images/2015/10/1Cp35eJbY_bRl5VIqf11qx1Jq7kN1WMbWzU4Ck-w.png" alt="devleague-logo">
+          <img src="{{asset 'images/devleague.png'}}" alt="devleague-logo">
         </li>
         <li class="htdc-logo">
-          <img src="http://uberhackathon.devleague.com/content/images/2015/10/1L1Pzkh85LtaCUG-h7aPBhyQtKY_83Sjskhgzh4I.png" alt="htdc-logo">
+          <img src="{{asset 'images/htdc.png'}}" alt="htdc-logo">
         </li>
         <li class="maui-economic-development-board-logo">
-          <img src="http://uberhackathon.devleague.com/content/images/2015/10/16mS3Ks85qC_syZWcMPWX-G4mfp_5MmUReuM7W3Q.png" alt="maui-econimic-development-board-logo">
+          <img src="{{asset 'images/maui.png'}}" alt="maui-econimic-development-board-logo">
         </li>
       </ul>
     </secion>
