--- a/content/themes/devleague/assets/css/styles.css
+++ b/content/themes/devleague/assets/css/styles.css
@@ -1,4 +1,80 @@
+ul, li{
+  padding: 0;
+  margin: 0;
+}
+
+.main-header {
+  background-size: cover; 
+  height:52vh;
+}
+
+section {
+  padding: 20px 0;
+}
+
+a{
+  text-decoration: none;
+  color: #3D96B9;
+}
+
+h2 {
+  color: #3D96B9;
+}
+
+i {
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.livecoding-large {
+  width:100%; 
+  text-align: center;
+}
+
+.livecoding-large span{
+  width:400px; 
+  display:inline-block;
+  text-align: center;
+}
+
+.register {
+  text-align: center;
+}
+.register-link {
+  background-color:#3D96B9;
+  width: 50%;
+  height: 60px;
+  display: table;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+.register-link:hover {
+  background-color: #8EBCCF;
+}
+
+.register-link a {
+  display: table-cell;
+  vertical-align: middle;
+  height: 60px;
+  color: #fff;
+  text-decoration: none;
+  width: 100%;
+  font-weight: bold;
+}
+
+/*.register-link a:hover {
+  color:#3D96B9;
+  text-decoration: none;
+}
+*/
+.post {
+  max-width: 800px;
+}
+
 ul.plain-list {
+  padding: 0;
+  margin: 0;
   list-style-type: none;
 }
 
@@ -10,31 +86,36 @@ ul#sponsors-list li {
   display: inline-block;
   vertical-align: top;
   height: 120px;
+  margin: 10px 30px;
 }
 
 ul#sponsors-list li img {
-  display: inline;
-  position: inherit;
+  /*display: inline;*/
+  /*position: inherit;*/
 }
 
 ul#sponsors-list li.uber-logo {
   width: 170px;
 }
 
+ul#sponsors-list li.livecoding-logo {
+  padding-top: 35px;
+  width: 170px;
+}
+
 ul#sponsors-list li.devleague-logo {
-  /*width: 230px;*/
-  padding-top: 15px;
+  padding-top: 25px;
   margin-left: 10px;
 }
 
 ul#sponsors-list li.htdc-logo {
-  padding-top: 10px;
+  padding-top: 20px;
   margin-left: 30px;
 }
 
 ul#sponsors-list li.maui-economic-development-board-logo {
-  padding-left: 70px;
-  margin-top: -35px;
+  /*padding-left: 70px;*/
+  margin-top: 0px;
 }
 
 ul#sponsors-list li.uber-logo img {
