Updated register links to Eventbrite.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -45,7 +45,7 @@
         <p>We will also have guests on the main channel talking about some of the cool things that they have going on.</p>
         <div class="register">
           <span class="register-link">
-            <a href="/register-now">Cool! I wanna sign up. >></a>
+            <a href="https://www.eventbrite.com/e/devleagueuber-hackathon-tickets-18921075446">Cool! I wanna sign up. >></a>
           </span>
         </div>
       </section>
@@ -103,7 +103,7 @@
     <section class="post-content">
       <div class="register">
         <span class="register-link">
-          <a href="/register-now">I'm down! Let's do this. >></a>
+          <a href="https://www.eventbrite.com/e/devleagueuber-hackathon-tickets-18921075446">I'm down! Let's do this. >></a>
         </span>
       </div>
     </section>
@@ -187,7 +187,7 @@
       </p>
       <div class="register">
         <span class="register-link">
-          <a href="/register-now">Sounds good! I'm in. >></a>
+          <a href="https://www.eventbrite.com/e/devleagueuber-hackathon-tickets-18921075446">Sounds good! I'm in. >></a>
         </span>
       </div>
     </section>
