Small copy edits.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -179,12 +179,13 @@
         <h4>Award Categories:</h4>
         <ul>
           <li>Best Overall Application</li>
-          <li>Best Student Submission</li>
-          <li>Best Noob Submission</li>
+          <li>Most Creative Idea</li>
+          <li>Noob Glory Award</li>
           <li>Beast Mode Award</li>
           <li>Best Dressed Attendee</li>
         </ul>
       </p>
+      <p>All submissions must at least be a working demo. Participants are welcome to use their languages/frameworks of choice.</p>
       <div class="register">
         <span class="register-link">
           <a href="https://www.eventbrite.com/e/devleagueuber-hackathon-tickets-18921075446">Sounds good! I'm in. >></a>
@@ -210,7 +211,7 @@
           <li>All participants must attend the event at one of the official venues as listed.</li>
           <li>Particpants must build applications during the course of the event.</li>
           <li>All participants must utilize the <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API.</a>.</li>
-          <li>All particpants must respect the hosts and facilities.</li>
+          <li>All particpants must show aloha to the hosts and facilities.</li>
           <li>All particpants must be <b>excellent</b> to each other.</li>
         </ul>
     </secion>
