--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -32,7 +32,7 @@
       </section>
       <section>
         <h3>What is the Hackathon All About?</h3>
-        <p>We truly believe that community is such an important part of what we do and we really wanted to try to put together an event that would allow developers from across the Islands to come together in venues in their own communities, but particpate together as a whole.</p>
+        <p>We truly believe that community is such an important part of what we do and we really wanted to try to put together an event that would allow developers from across the Islands to come together in venues in their own communities, but participate together as a whole.</p>
         <p>Uber engineers will be traveling from Uber HQ and along side instructors from DevLeague will be working in conjunction to host a 36 hour challenge, designed for attendees across the state to come together in both physical and virtual spaces and celebrate the community that we have n Hawaii as a whole.</p>
         <p>Attendees will collaborate in teams, be able to interact virtually with mentors and other teams, and come together to see what kind of applications we can build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API</a> for some fun prizes and to see what kind of cool stuff we can come up with over a weekend.</p>
         <div class="livecoding-large">
@@ -236,6 +236,15 @@
         </li>
         <li class="maui-economic-development-board-logo">
           <img src="{{asset 'images/maui.png'}}" alt="maui-econimic-development-board-logo">
+        </li>
+        <li class="ukulele-underground-logo">
+          <img src="{{asset 'images/ukuleleunderground.jpg'}}" alt="ukulele-underground-logo">
+        </li>
+        <li class="lesson-underground-logo">
+          <img src="{{asset 'images/lesson-underground.png'}}" alt="lesson-underground-logo">
+        </li>
+        <li class="nalukai-foundation-logo">
+          <img src="{{asset 'images/nalukai.png'}}" alt="nalukai-foundation-logo">
         </li>
       </ul>
     </secion>
