Added Frontend Masters logo and updated some copy.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -165,10 +165,10 @@
       <p>
         <h4>Prizes will include:</h4>
         <ul>
-          <li>A chance to go to Uber Headquarters and spend a day with their engineering team (travel not included)</li> 
-          <li>A DevLeague scholarship</li> 
+          <li>A chance to go to Uber Headquarters and spend a day with their engineering team. (travel not included - currently looking for travel sponsor)</li> 
+          <li>A $5K DevLeague scholarship, giftable to someone else. Application approval required for final recipient.</li> 
           <li>Uber swag</li>
-          <li>Electronics</li> 
+          <li>Cool Dev Stuff</li> 
           <li>Gamer Gear</li> 
           <li>Gift Cards</li>
           <li>Conference Passes</li>
@@ -178,8 +178,11 @@
       <p>
         <h4>Award Categories:</h4>
         <ul>
-          <li>Best Overall Application</li>
+          <li>
+            Best Overall Application
+          </li>
           <li>Most Creative Idea</li>
+          <li>Oh So Pretty Award</li>
           <li>Noob Glory Award</li>
           <li>Beast Mode Award</li>
           <li>Best Dressed Attendee</li>
@@ -198,7 +201,7 @@
         <h2 class="post-title"><a href="#">Judges</a></h2>
     </header>
     <section class="post-content">
-      <p>TBA</p>
+      <p>TBA - We will be having a combination of Uber engineers and local developers on the panel.</p>
     </secion> 
   </article>
   <article class="post">
@@ -210,7 +213,7 @@
           <li>All participants must be at least 18 years of age or older.</li>
           <li>All participants must attend the event at one of the official venues as listed.</li>
           <li>Particpants must build applications during the course of the event.</li>
-          <li>All participants must utilize the <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API.</a>.</li>
+          <li>All participants must utilize the <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API</a>.</li>
           <li>All particpants must show aloha to the hosts and facilities.</li>
           <li>All particpants must be <b>excellent</b> to each other.</li>
         </ul>
@@ -245,6 +248,9 @@
         </li>
         <li class="nalukai-foundation-logo">
           <img src="{{asset 'images/nalukai.png'}}" alt="nalukai-foundation-logo">
+        </li>
+        <li class="frontend-masters-logo">
+          <img src="{{asset 'images/logo_frontendmasters.png'}}" alt="frontendmasters-logo">
         </li>
       </ul>
     </secion>
