Added pcgamerz as sponsor.

--- a/content/themes/devleague/assets/css/styles.css
+++ b/content/themes/devleague/assets/css/styles.css
@@ -140,3 +140,7 @@ ul#sponsors-list li.ukulele-underground-logo {
 
 ul#sponsors-list li.nalukai-foundation-logo {
 }
+
+ul#sponsors-list li.pcgamerz-logo {
+  margin-top: 40px;
+}
