--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -252,6 +252,9 @@
         <li class="frontend-masters-logo">
           <img src="{{asset 'images/logo_frontendmasters.png'}}" alt="frontendmasters-logo">
         </li>
+        <li class="pcgamerz-logo">
+          <img src="{{asset 'images/pcgamerz.png'}}" alt="pcgamerz-logo">
+        </li>
       </ul>
     </secion>
   </article>
