--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -201,7 +201,30 @@
         <h2 class="post-title"><a href="#">Judges</a></h2>
     </header>
     <section class="post-content">
-      <p>TBA - We will be having a combination of Uber engineers and local developers on the panel.</p>
+      <ul id="judges-panel">
+        <li>
+          <div class="profile-pic">
+            <img src="{{asset 'images/alecgo-profile.png'}}">
+          </div>
+          <div class="profile-name">
+            Alec Go - Uber
+          </div>
+          <div class="profile-bio">
+            Alec Go is a Senior Partner Engineer at Uber helping to build its developer ecosystem and platform. Before Uber, he was a Senior Software Engineer at Google and worked on various products, including Google Play, YouTube, and AdWords.
+          </div>
+        </li> 
+        <li>
+          <div class="profile-pic">
+            <img src="{{asset 'images/jamesmishra-profile.jpeg'}}">
+          </div>
+          <div class="profile-name">
+            James Mishra - Uber
+          </div>
+          <div class="profile-bio">
+            James Mishra is a backend software engineer at Uber, helping build new features for the Uber API. Before Uber, he worked in various federal research labs.
+          </div>
+        </li> 
+      </ul>
     </secion> 
   </article>
   <article class="post">
