--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -160,8 +160,19 @@
         <h2 class="post-title"><a href="#">Prizes</a></h2>
     </header>
     <section class="post-content">
-      <p>We're still working hard to finalize all the official prizes but we will be offering up to $10,000 in prizes to winning teams in variety of categories.
-      </p>
+      <div>
+        <p><a href="https://frontendmasters.com/">FrontendMasters.com</a> will be providing free 3-month subscriptions(a $117 value) to <b>ALL</b> hackathon participants. With an impressive collection of videos across a wide range of topics from top industry professionals their entire video catalog is the best out there and is a fantastic resource for developers of all skill levels.</p>
+        <a href="https://frontendmasters.com/">
+         <img src="{{asset 'images/logo_frontendmasters.png'}}">
+        </a>
+      </div>
+      <div>
+        <p>We're still working hard to finalize all the official prizes but we will be offering up to $10,000 in prizes to winning teams in variety of categories.
+        </p>
+      </div>
+      <div>
+        
+      </div>
       <p>
         <h4>Prizes will include:</h4>
         <ul>
