Add judges panel content and images.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -266,13 +266,36 @@
         </li> 
         <li>
           <div class="profile-pic">
-            <img src="{{asset 'images/anonymous-profile.jpg'}}">
+            <img src="{{asset 'images/Todd-Nacapuy.jpg'}}">
           </div>
           <div class="profile-name">
-            TBA - SomeCo
+            Todd Nacapuy - CIO, State of Hawaii
           </div>
           <div class="profile-bio">
-            More judges to be announced in the coming days....check back soon!
+            Appointed by Gov. David Y. Ige in April 2015, Todd Nacapuy formally stepped into the role of the State of Hawai‘i’s Chief Information Officer (CIO) on May 4, 2015.
+            Before joining the Ige Administration, Nacapuy was the senior technical account manager responsible for all Premier Commercial services for Microsoft in Hawai‘i.
+          </div>
+        </li> 
+        <li>
+          <div class="profile-pic">
+            <img src="{{asset 'images/russel_cheng.jpg'}}">
+          </div>
+          <div class="profile-name">
+            Russel Cheng - DevLeague
+          </div>
+          <div class="profile-bio">
+            Russel is co-founder of DevLeague and has enjoyed a long career as an entrepreneur, startup mentor and advisor with 16 years experience in Japan and Asia. He has previously held executive management positions at Microsoft, Beacon Communications/Leo Burnett Japan, CS First Boston Japan before returning home and finding his way to his next venture as co-founder of DevLeague and Jr. DevLeague.
+          </div>
+        </li> 
+        <li>
+          <div class="profile-pic">
+            <img src="{{asset 'images/kelli_borgonia.jpg'}}">
+          </div>
+          <div class="profile-name">
+            Kelli Borgonia - DevLeague
+          </div>
+          <div class="profile-bio">
+            Kelli is DevLeague's UX and Front End instructor and co-owner/product designer of Goma Games. Kelli is responsible for the design, art direction, and architectural design (UI/UX) of Goma Games projects. In addition to design, Kelli enjoys illustrating characters for interactive games and children's books, and is looking forward to the launch their custom CMS, Airship, later this year.
           </div>
         </li> 
       </ul>
