Added blue startups and box jelly logos and fixed typos.

--- a/content/themes/devleague/index.hbs
+++ b/content/themes/devleague/index.hbs
@@ -27,13 +27,13 @@
     <section class="post-content">
       <section>
         <p>DevLeague and Uber are pleased to announce an exciting new partnership that we hope will contribute to the growth and exposure of the technical ecosystem here in Hawaii! It is a key initiative of ours to continue to grow and connect the developer community and provide valuable skills and opportunities to our students and the community at large.</p>
-        <p>To celebrate we are excited to announce a first of it's kind of event that brings together Uber’s expertise, along with DevLeague’s accelerated software development program in an effort to give Hawaii developers exciting new opportunities to network, collaborate and build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API.</a>.</p>
+        <p>To celebrate, we are excited to announce a first of it's kind of event that brings together Uber’s expertise, along with DevLeague’s accelerated software development program in an effort to give Hawaii developers exciting new opportunities to network, collaborate and build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API and your imagination.</a>.</p>
 
       </section>
       <section>
         <h3>What is the Hackathon All About?</h3>
-        <p>We truly believe that community is such an important part of what we do and we really wanted to try to put together an event that would allow developers from across the Islands to come together in venues in their own communities, but participate together as a whole.</p>
-        <p>Uber engineers will be traveling from Uber HQ and along side instructors from DevLeague will be working in conjunction to host a 36 hour challenge, designed for attendees across the state to come together in both physical and virtual spaces and celebrate the community that we have n Hawaii as a whole.</p>
+        <p>We truly believe that community is such an important part of what we do and we really wanted to try to put together an event that would allow developers from across the Islands to come together in venues within their own communities, but also participate together as a whole.</p>
+        <p>Uber engineers will be traveling from Uber HQ and along side instructors from DevLeague, will be working in conjunction to host a 36 hour challenge, designed for attendees across the state to come together in both physical and virtual spaces and celebrate the community that we have n Hawaii as a whole.</p>
         <p>Attendees will collaborate in teams, be able to interact virtually with mentors and other teams, and come together to see what kind of applications we can build using <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API</a> for some fun prizes and to see what kind of cool stuff we can come up with over a weekend.</p>
         <div class="livecoding-large">
           <span>
@@ -94,7 +94,7 @@
           </li>
           <li class="location">
             <h5>Kauai</h5>
-            <h6>Anchor Cover Shopping Center </h6>
+            <h6>Anchor Cove Shopping Center </h6>
             <address>3416 Rice St, Lihue, HI 96766</address>
           </li>
         </ul>
@@ -144,12 +144,12 @@
       <p>We will be hosting a series of pre-events prior to the hackathon to get hands-on with components of the Uber API and useful tips and tools for getting prepared for a smooth experience during the event and to allow people to prepare on the tools and things to consider to save time prior to the event.</p>
       <p>Registered attendees will receive invites for online virtual sessions.</p>
       <div>
-        <h4>October 13 - 6PM - Uber API Overview</h4>
+        <h4>October 19 - 6PM - Uber API Overview</h4>
         <p>In this session we will go over some of the main components of the Uber API in order to give participants some experience with connecting and understanding the various parts of the Uber API.</p>
         <p>This is a great way to start getting some ideas for what you may want to build and get familiar with basic setup allowing you to spend your time during the event building your app.</p>
       </div>
       <div>
-        <h4>October 19 - 6PM - Deployment Tips and Tricks</h4>
+        <h4>October 21 - 6PM - Deployment Tips and Tricks</h4>
         <p>Don't get yourself hung up on trying to get your application out the door an hour before the end of the event!</p>
         <p>In this session, we will go over some common deployment scenarios and share some tips and resources for setting up your environments before the event. This will save you time towards the end of the event when you need to JUST SHIP IT!</p>
       </div>
@@ -257,10 +257,10 @@
         <ul>
           <li>All participants must be at least 18 years of age or older.</li>
           <li>All participants must attend the event at one of the official venues as listed.</li>
-          <li>Particpants must build applications during the course of the event.</li>
+          <li>Participants must build applications during the course of the event.</li>
           <li>All participants must utilize the <a href='https://developer.uber.com/' target='_blank'>Uber’s Developer API</a>.</li>
-          <li>All particpants must show aloha to the hosts and facilities.</li>
-          <li>All particpants must be <b>excellent</b> to each other.</li>
+          <li>All participants must show aloha to the hosts and facilities.</li>
+          <li>All participants must be <b>excellent</b> to each other.</li>
         </ul>
     </secion>
   </article>
@@ -300,6 +300,12 @@
         <li class="pcgamerz-logo">
           <img src="{{asset 'images/pcgamerz.png'}}" alt="pcgamerz-logo">
         </li>
+        <li class="boxjelly-logo">
+          <img src="{{asset 'images/boxjelly_logo.png'}}" alt="boxjelly-logo">
+        </li>
+        <li class="bluestartups-logo">
+          <img src="{{asset 'images/bluestartupslogo.png'}}" alt="bluestartups-logo">
+        </li>
       </ul>
     </secion>
   </article>
@@ -324,7 +330,7 @@
         <i class="icon-facebook">
           <span class="hidden"></span>
           <a href="https://www.facebook.com/Dev-League-419352214850086/timeline/">DevLeague on Facebook</a>
-        </i>.
+        </i>
       </p>
     </secion>
   </article>
