--- a/content/themes/devleague/assets/css/styles.css
+++ b/content/themes/devleague/assets/css/styles.css
@@ -116,7 +116,7 @@ ul#sponsors-list {
 ul#sponsors-list li {
   display: inline-block;
   vertical-align: top;
-  height: 120px;
+  /*height: 120px;*/
   margin: 10px 30px;
   width: 170px;
 }
